--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/resume-analyzer-icon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume Analyzer</title>
+    <meta name="description" content="AI-Powered Resume Analyzer - Match your resume with job descriptions" />
+    <meta name="theme-color" content="#016064" />
+    <title>AI Resume Analyzer | Smart Job Matching</title>
   </head>
   <body>
     <div id="app"></div>
